--- a/_posts/2010-01-08-post-chat.md
+++ b/_posts/2010-01-08-post-chat.md
@@ -5,12 +5,13 @@ categories:
 tags:
   - chat
   - Post Formats
+excerpt_separator: <!--more-->
 ---
 
 Abbott: Strange as it may seem, they give ball players nowadays very peculiar names.
 
 Costello: Funny names?
-
+<!--more-->
 Abbott: Nicknames, nicknames. Now, on the St. Louis team we have Who's on first, What's on second, I Don't Know is on third--
 
 Costello: That's what I want to find out. I want you to tell me the names of the fellows on the St. Louis team.
