解决网站数学公式渲染问题以及上传了历史文章！
1. 目前数学公式渲染问题采用的解决方案是：Jekyll 默认的 Markdown
解析器 Kramdown 配合着数学公式渲染引擎 MathJaX 一起使用；
2. 上传了之前 Hexo、公众号以及知乎上的历史文章。

--- a/_posts/2022-04-04-如何更好理解Peterson算法.md
+++ b/_posts/2022-04-04-如何更好理解Peterson算法.md
@@ -4,21 +4,25 @@ date: 2022-04-04 20:11:58
 categories:
   - Algorithm
 tags: 
-excerpt: ""
+excerpt: 
+excerpt_separator: <!--more-->
 header:
+  show_overlay_excerpt: false # true(default)
+  tagline:  # Overrides page excerpt.
   overlay_image: /assets/images/unsplash-image-post-cover.jpg
   overlay_filter: 0.5
   caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
   actions:
-    - label: ""
+    - label: 
       url: https://unsplash.com
 ---
-
+# 如何更好理解Peterson算法?
 ## 1 Peterson算法提出的背景
 
 在我们讲述Peterson算法之间，我们先了解一下Peterson算法提出前的背景（即：在这个算法提出之前，前人们都做了哪些工作）这对于我们之后理解Peterson算法有很大的裨益。
 
 Peterson 算法是基于双线程互斥访问的LockOne与LockTwo算法而来。LockOne 算法使用一个 flag 布尔数组，LockTwo 使用一个 turn的整型量，都实现了互斥，但是都存在死锁的可能。Peterson 算法把这两种算法结合起来，完美地用软件实现了双线程互斥问题。
+<!--more-->
 
 ## 2 Peterson算法
 
