校正了两篇文章，发布了一篇新的文章，修改了网站主题的配色，添加了网站版权信息！

--- a/_posts/2023-06-15-Python下的文件目录.md
+++ b/_posts/2023-06-15-Python下的文件目录.md
@@ -215,7 +215,7 @@ tree -L 3 /usr/local/Cellar/python@3.11/3.11.3/Frameworks/Python.framework/Versi
 
 ## 后记
 
-了解 Python 安装之后的文件目录，对于理解 Python 的运作机理还是起到了一的作用，从 Python 的文件目录，可以大概想想一个编程语言å的最主要的部分其实也就三个（也没准是管中窥豹，hh）：
+了解 Python 安装之后的文件目录，对于理解 Python 的运作机理还是起到了一的作用，从 Python 的文件目录，可以大概想想一个编程语言的最主要的部分其实也就三个（也没准是管中窥豹，hh）：
 
 - 首先，既然你定一个一套语法，自然需要一个东西去把它翻译出来，因为机器可不认你的那套语法，所以自然就会有解释器/编译器；
 - 其次，为了让你的语言能够用较少的代码实现一些基本的功能，自然需要自带一些库文件了；
