--- a/_posts/2023-06-17-Python-的包管理工具.md
+++ b/_posts/2023-06-17-Python-的包管理工具.md
@@ -29,8 +29,6 @@ header:
 - Python 版本：3.11.3
 - pip 版本：23.1.2
 
-
-
 Pyhton 的强大来源于其丰富的第三方库，自然在使用 Python 的时候不可避免的会需要用到一些第三方库，那么，如何高效地对这些第三方库进行查找、安装和卸载等等操作，都是包管理涉及的内容。
 
 pip 是官方提供给的一个 Python 包管理工具[^1]，pip 提供了对 Python 包进行的查找、下载、安装以及卸载等功能。下面要介绍的 Python 包管理的内容，也是围绕着 pip 工具展开的。
@@ -108,7 +106,7 @@ parser.add_argument(
 
 这就解释了，为什么可以通过 `python -m ensurepip --upgrade` 安装 pip.
 
-关于 pip 的安装，还有最后一点需要强调的是，一个版本的 Python 对应了一个 pip 工具，理解这一点，对于电脑中存在多个版本的 Python 时尤其的重要，每个 Python 都有自己的 pip 工具，所以，当在使用 pip 工具安装第三方库时，一定要清楚，你当时使用的 pip 属于哪个版本的 Python（这个问题本质上是电脑的环境变量的配置问题），其实这也侧面体现出后面要介绍的 Python 版本管理 和 环境管理的意义和重要性。
+关于 pip 的安装，还有最后一点需要强调的是，一个版本的 Python 对应了一个 pip 工具，理解这一点，对于电脑中存在多个版本的 Python 时尤其的重要，每个 Python 都有自己的 pip 工具，所以，当在使用 pip 工具安装第三方库时，一定要清楚，你当时使用的 pip 属于哪个版本的 Python（这个问题本质上是电脑的环境变量的配置问题），其实这也侧面体现出后面要介绍的 **Python 版本管理**和**环境管理**的意义和重要性。
 
 如果不清楚当前的 pip 命令属于哪个版本的 Python，可以用 `which` 或 `whereis` 命令，再结合 `ls -l` 命令简单查询一下：
 
@@ -136,9 +134,9 @@ lrwxr-xr-x  1 borne  admin  37  4 22 20:16 /usr/local/bin/pip3 -> ../Cellar/pyth
 python -m pip <pip arguments>
 ```
 
-- `python -m pip`：使用你指定为 `python` 的 Python 解释器去执行 `pip`
+- `python -m pip`：通过 `python` 的模块管理机制（`-m mod`）来执行的，确保使用的是与当前 Python 环境关联的正确版本的 `pip`，而不会受到系统 `PATH` 中不同版本 `pip` 的影响。
 
-> 提示：也可以直接运行 `pip <pip arguments>`，但是，还是前面说的那个问题，在运行时要清楚这个 `pip` 属于谁，当然 `python -m pip` 也存在同样的问题，运行时也同样要清楚 `python` 属于哪个版本。
+> 提示：也可以直接运行 `pip <pip arguments>`，但是，还是前面说的那个问题，在运行时要清楚这个 `pip` 属于谁，因为直接调用 `pip` 命令行工具，这通常依赖于系统 `PATH` 环境变量中所配置的 `pip` 版本。
 
 ## pip 常用的命令
 
@@ -147,6 +145,7 @@ python -m pip <pip arguments>
 ```bash
 python -m pip install --upgrade pip
 ```
+
 ### pip 安装 Packages
 
 第一种安装方式，也是最常见的情况，使用 Requirement Specifiers[^4] 从 [PyPI](https://pypi.org/) 安装：
@@ -176,6 +175,7 @@ python -m pip install SomePackage-1.0-py2.py3-none-any.whl
 ```
 
 其实，如果阅读得仔细的话，到这也许就会意识到，前面在对 pip 进行安装时，用到的 `ensurepip` 包内其实有 `pip-23.0.1-py3-none-any.whl`
+
 ### pip 卸载 Packages
 
 ```bash
@@ -183,6 +183,7 @@ python -m pip uninstall SomePackage
 ```
 
 > 注意：pip 还会在升级到新版本之前自动卸载旧版本的包
+
 ### pip 列出 Packages
 
 列出已安装的包：
@@ -202,6 +203,7 @@ python -m pip list --outdated
 ```bash
 python -m pip show sphinx
 ```
+
 ### pip 搜索 Packages
 
 pip 可以使用 `pip search` 命令在 PyPI 中搜索包：
@@ -211,7 +213,6 @@ python -m pip search "query"
 ```
 
 > Notes：PyPI no longer supports 'pip search' (or XML-RPC search). Please use https://pypi.org/search (via a browser) instead.
-
 
 ## pip 其它的命令
 
@@ -230,6 +231,7 @@ python -m pip completion --bash >> ~/.profile
 ```bash
 python -m pip completion --zsh >> ~/.zprofile
 ```
+
 ### pip freeze
 
 以需求格式输出已安装的包，包以不区分大小写的排序顺序列出。
@@ -257,6 +259,7 @@ pip 允许用户通过 3 种机制更改其行为[^7]：
 可以对 pip 进行一些个性化的设置，比如：当下载第三库速度太慢时，可以通过设置镜像源加快下载速度。
 
 下面将主要介绍两个比较常用的更改方式：命令行选项和配置文件。
+
 ### pip config
 
 命令行选项覆盖环境变量，环境变量覆盖配置文件中的值。即：通过命令行选项进行设置的优先级最高。
@@ -292,6 +295,7 @@ python -m pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simp
 ```bash
 python -m pip config set global.log /var/log/pip.log
 ```
+
 ### pip 配置文件
 
 配置文件可以更改命令行选项的默认值。它们是使用标准 INI 格式的配置文件编写的。
