更新文章：人类早期驯服Word实录

--- a/_posts/2025-05-05-人类早期驯服-Word-实录.md
+++ b/_posts/2025-05-05-人类早期驯服-Word-实录.md
@@ -1,8 +1,8 @@
 ---
 title: "人类早期驯服 Word 实录"
 date: 2025-05-05T15:26:28+08:00
-categories: []
-tags: []
+categories: [Tools]
+tags: [Word]
 excerpt: 
 excerpt_separator: <!--more-->
 header:
@@ -17,8 +17,6 @@ header:
       url: "https://unsplash.com"
 ---
 # 人类早期驯服 Word 实录
-
-[toc]
 
 <!-- 摘要内容（首页显示） -->
 
